# autolabel

./: README.md  analyze.py  build.py  build.sh  capture_conntrack.sh  load_logs.py  logs.py  main.py  merge_set.py  net_trace.py  parse.py  print_fields_new.lua  process.py  pyproject.toml  scenario_descriptions.md  scene.py  schema.py  utils.py
example/juice-shop/: .gitignore  Dockerfile  Dockerfile_node  README.md  challenges.yml  docker-compose.yml  scene.yml  start.py
example/juice-shop/bot/: .gitignore  Dockerfile  config.py  main.py  pyproject.toml  user.py  utils.py
example/juice-shop/bot/assets/: wordlist.txt
example/juice-shop/bot/attacks_utils/: __init__.py  payload_server.py  reverse_shell.py
example/juice-shop/bot/behaviors/: __init__.py  attack.py  normal.py
example/multi-jump/: scene.yml
example/python-demo/app/: pyproject.toml
example/sandworm/: Dockerfile  scene.yml  scene_short.yml
example/simple_flask/: scene.yml
example/web-traffic-generator/: Dockerfile  config.py
hook/nodejs/: Dockerfile_node_12.22.12  Dockerfile_node_22  Dockerfile_node_6.14.4  Dockerfile_node_8.14.0  centos7-update.sh  debian8-sources.list
modify/: __init__.py
modify/hook_glibc_applog/: Dockerfile  Makefile  build.sh  hook_glibc_applog.c
modify/hook_glibc_attacker/: Dockerfile  Makefile  build.sh  config_attack.py  configure.py  hook_glibc_attacker.c  ip_list.h
modify/hook_glibc_trace/: Dockerfile  Makefile  build.sh  hook_glibc_trace.c
modify/hook_kernel/: Makefile  config_applog.py  configure.py  ftrace_helper.h  write_uuid.c  write_uuid_test.c
modify/hook_netlog/: Makefile  (+8 more)
sysdig_rules/: __init__.py  graph.py  java.py  nodejs.py  python_asyncio.py
(+204 files in other folders)
