[tool.poetry]
name = "bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
httpx = "^0.27.2"
pydantic = "^2.8.2"
pydantic-settings = "^2.3.4"
pydantic-settings-yaml = "^0.2.0"
beautifulsoup4 = "^4.12.3"
loguru = "^0.7.2"
ipython = "^8.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
