[tool.poetry]
name = "unit-trainless-detection"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
typer = "^0.12.3"
psutil = "^6.0.0"
loguru = "^0.7.2"
fastapi = "^0.111.1"
hypercorn = "^0.17.3"
pydantic = "^2.8.2"
aiohttp = "^3.9.5"
itsdangerous = "^2.2.0"

[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
